Add styles2.css file

--- a/index2.html
+++ b/index2.html
@@ -4,8 +4,8 @@
  </head>
  <body> 
 
-  <h1>This is a heading 2222</h1><p><a href="index2.html"><img src="images2/image2_1.jpg" 
-  width="189" height="255" alt="lorem"></a>This is a paragraph1.</p>
+  <h1>This is a heading </h1><p><a href="index2.html"><img src="images2/image2_1.jpg" 
+  width="189" height="255" alt="lorem"></a>This is a paragraph.</p>
 
 
  </body>
